--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Multiplayer game using socket.io",
   "main": "server.js",
   "scripts": {
-    "start" : "node server.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/IAbouzied/Liars-Dice#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "hashmap": "^2.3.0",
     "socket.io": "^2.1.1"
   }
 }
