--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "liars-dice",
   "version": "1.0.0",
   "description": "Multiplayer game using socket.io",
+  "engines" : { 
+    "node" : ">=8.11.12" 
+  },
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
